--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "jest-cli": "^26.1.0",
     "jest-junit": "^11.0.1",
     "lint-staged": "^10.2.11",
+    "moment": "^2.29.0",
     "prettier": "^2.1.2",
     "sort-package-json": "^1.44.0",
     "typescript": "^4.0.3"
