feat(review-mutations): add review mutations

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,6 +11,7 @@
     "copy-to-project": "babel-node webpackx.js ./scripts/copySchemaToProject.js",
     "database:seed": "babel-node webpackx.js ./scripts/seed/seedDatabase",
     "graphql": "webpack --progress --config webpack.graphql.js",
+    "migrate": "babel-node webpackx.js ./scripts/migration/migrate",
     "serve:graphql": "node dist/graphql/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -79,6 +80,7 @@
     "mockdate": "^3.0.2",
     "mongodb-memory-server": "^6.8.0",
     "reload-server-webpack-plugin": "^1.0.1",
+    "signale": "^1.4.0",
     "terser-webpack-plugin": "^4.2.2",
     "ts-graphql-plugin": "^2.0.1",
     "webpack": "^4.44.2",
