--- a/package.json
+++ b/package.json
@@ -13,11 +13,21 @@
     "android": "yarn workspace @booksapp/app android",
     "app": "yarn workspace @booksapp/app start",
     "app:pod": "yarn workspace @booksapp/app pod:install",
+    "delete:all": "yarn delete:build && yarn delete:dist && yarn delete:generated && yarn delete:metro-cache && yarn delete:node_modules && yarn delete:yarn-offline-cache",
+    "delete:build": "find . -name \"build\" -exec rm -rf '{}' +",
+    "delete:dist": "find . -name \"dist\" -exec rm -rf '{}' +",
+    "delete:generated": "find . -name \"__generated__\" -exec rm -rf '{}' +",
+    "delete:metro-cache": "find . -name \"metro-cache\" -exec rm -rf '{}' +",
+    "delete:node_modules": "find . -name \"node_modules\" -exec rm -rf '{}' +",
+    "delete:snapshot": "find . -name \"__snapshots__\" -exec rm -rf '{}' +",
+    "delete:yarn-offline-cache": "find . -name \"yarn-offline-cache\" -exec rm -rf '{}' +",
+    "delete:yarn.lock": "find . -name \"yarn.lock\" -exec rm -rf '{}' +",
     "graphql": "yarn workspace @booksapp/server graphql",
     "ios": "yarn workspace @booksapp/app ios",
     "lint": "eslint --fix --ext .js,.ts,.tsx",
     "lint:ci": "eslint --quiet --ext .js,.ts,.tsx .",
     "lint:fix": "eslint --fix --ext .js,.ts,.tsx .",
+    "migrate": "yarn workspace @booksapp/server migrate",
     "prettier": "prettier",
     "relay": "yarn workspace @booksapp/app relay",
     "server:build": "yarn workspace @booksapp/server build",
@@ -27,16 +37,7 @@
     "test:server": "yarn workspace @booksapp/server test",
     "tsc": "tsc --pretty",
     "update": "yarn update-schema && yarn relay",
-    "update-schema": "yarn workspace @booksapp/server update-schema",
-    "delete:all": "yarn delete:build && yarn delete:dist && yarn delete:generated && yarn delete:metro-cache && yarn delete:node_modules && yarn delete:yarn-offline-cache",
-    "delete:build": "find . -name \"build\" -exec rm -rf '{}' +",
-    "delete:snapshot": "find . -name \"__snapshots__\" -exec rm -rf '{}' +",
-    "delete:dist": "find . -name \"dist\" -exec rm -rf '{}' +",
-    "delete:generated": "find . -name \"__generated__\" -exec rm -rf '{}' +",
-    "delete:metro-cache": "find . -name \"metro-cache\" -exec rm -rf '{}' +",
-    "delete:node_modules": "find . -name \"node_modules\" -exec rm -rf '{}' +",
-    "delete:yarn-offline-cache": "find . -name \"yarn-offline-cache\" -exec rm -rf '{}' +",
-    "delete:yarn.lock": "find . -name \"yarn.lock\" -exec rm -rf '{}' +"
+    "update-schema": "yarn workspace @booksapp/server update-schema"
   },
   "lint-staged": {
     "*.yml": [
