--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -10,19 +10,21 @@
   },
   "dependencies": {
     "@babel/plugin-transform-flow-strip-types": "^7.10.4",
+    "@booksapp/relay": "^0.0.1",
     "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.9.0",
     "@react-navigation/native": "^5.7.4",
     "@react-navigation/stack": "^5.9.1",
     "babel-plugin-optional-require": "^0.3.1",
-    "react": "16.13.1",
+    "react": "0.0.0-experimental-e5d06e34b",
     "react-native": "0.63.2",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
     "react-native-vector-icons": "^7.1.0",
+    "react-relay": "0.0.0-experimental-8cc94ddc",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
@@ -41,12 +43,14 @@
     "@types/relay-runtime": "^10.0.4",
     "@types/styled-components": "^5.1.3",
     "babel-plugin-idx": "^2.4.0",
+    "babel-plugin-relay": "^10.0.1",
     "babel-plugin-styled-components": "^1.11.1",
+    "graphql": "^14.7.0",
     "metro-react-native-babel-preset": "^0.63.0",
     "react-native-dotenv": "^2.4.0",
     "relay-compiler": "^10.0.1",
     "relay-compiler-language-typescript": "^13.0.1",
     "relay-config": "^10.0.1",
-    "relay-runtime": "^10.0.1"
+    "relay-runtime": "9.0.0"
   }
 }
