--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -24,7 +24,7 @@
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
     "react-native-vector-icons": "^7.1.0",
-    "react-relay": "0.0.0-experimental-8cc94ddc",
+    "react-relay": "^0.0.0-experimental-183bdd28",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
@@ -51,6 +51,6 @@
     "relay-compiler": "^10.0.1",
     "relay-compiler-language-typescript": "^13.0.1",
     "relay-config": "^10.0.1",
-    "relay-runtime": "9.0.0"
+    "relay-runtime": "^10.0.1"
   }
 }
