--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "android": "yarn workspace @booksapp/app android",
     "app": "yarn workspace @booksapp/app start",
     "app:pod": "yarn workspace @booksapp/app pod:install",
+    "database:seed": "yarn workspace @booksapp/server database:seed",
     "delete:all": "yarn delete:build && yarn delete:dist && yarn delete:generated && yarn delete:metro-cache && yarn delete:node_modules && yarn delete:yarn-offline-cache",
     "delete:build": "find . -name \"build\" -exec rm -rf '{}' +",
     "delete:dist": "find . -name \"dist\" -exec rm -rf '{}' +",
