--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -24,7 +24,7 @@
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
     "react-native-vector-icons": "^7.1.0",
-    "react-relay": "^0.0.0-experimental-183bdd28",
+    "react-relay": "0.0.0-experimental-8cc94ddc",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
@@ -40,17 +40,17 @@
     "@babel/runtime": "^7.11.2",
     "@types/react-native": "^0.63.22",
     "@types/react-native-vector-icons": "^6.4.6",
-    "@types/relay-runtime": "^10.0.4",
+    "@types/relay-runtime": "^8.0.7",
     "@types/styled-components": "^5.1.3",
     "babel-plugin-idx": "^2.4.0",
-    "babel-plugin-relay": "^10.0.1",
+    "babel-plugin-relay": "9.0.0",
     "babel-plugin-styled-components": "^1.11.1",
     "graphql": "^14.7.0",
     "metro-react-native-babel-preset": "^0.63.0",
     "react-native-dotenv": "^2.4.0",
-    "relay-compiler": "^10.0.1",
-    "relay-compiler-language-typescript": "^13.0.1",
-    "relay-config": "^10.0.1",
-    "relay-runtime": "^10.0.1"
+    "relay-compiler": "9.0.0",
+    "relay-compiler-language-typescript": "12.0.0",
+    "relay-config": "9.0.0",
+    "relay-runtime": "9.0.0"
   }
 }
