--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -11,21 +11,25 @@
   "dependencies": {
     "@babel/plugin-transform-flow-strip-types": "^7.10.4",
     "@booksapp/relay": "^0.0.1",
+    "@booksapp/ui": "^0.0.1",
     "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.9.0",
     "@react-navigation/native": "^5.7.4",
     "@react-navigation/stack": "^5.9.1",
     "babel-plugin-optional-require": "^0.3.1",
+    "formik": "^2.1.6",
     "react": "0.0.0-experimental-e5d06e34b",
     "react-native": "0.63.2",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
     "react-native-vector-icons": "^7.1.0",
     "react-relay": "0.0.0-experimental-8cc94ddc",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
@@ -42,6 +46,7 @@
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/relay-runtime": "^8.0.7",
     "@types/styled-components": "^5.1.3",
+    "@types/yup": "^0.29.7",
     "babel-plugin-idx": "^2.4.0",
     "babel-plugin-relay": "9.0.0",
     "babel-plugin-styled-components": "^1.11.1",
