--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -44,6 +44,7 @@
     "@babel/runtime": "^7.11.2",
     "@types/react-native": "^0.63.22",
     "@types/react-native-vector-icons": "^6.4.6",
+    "@types/react-relay": "7.0.3",
     "@types/relay-runtime": "^8.0.7",
     "@types/styled-components": "^5.1.3",
     "@types/yup": "^0.29.7",
