--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -27,7 +27,7 @@
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
     "react-native-vector-icons": "^7.1.0",
-    "react-relay": "0.0.0-experimental-8cc94ddc",
+    "react-relay": "^0.0.0-experimental-183bdd28",
     "styled-components": "^5.2.0",
     "yup": "^0.29.3"
   },
@@ -44,8 +44,8 @@
     "@babel/runtime": "^7.11.2",
     "@types/react-native": "^0.63.22",
     "@types/react-native-vector-icons": "^6.4.6",
-    "@types/react-relay": "7.0.3",
-    "@types/relay-runtime": "^8.0.7",
+    "@types/react-relay": "^7.0.12",
+    "@types/relay-runtime": "^10.0.4",
     "@types/styled-components": "^5.1.3",
     "@types/yup": "^0.29.7",
     "babel-plugin-idx": "^2.4.0",
@@ -54,9 +54,9 @@
     "graphql": "^14.7.0",
     "metro-react-native-babel-preset": "^0.63.0",
     "react-native-dotenv": "^2.4.0",
-    "relay-compiler": "9.0.0",
-    "relay-compiler-language-typescript": "12.0.0",
-    "relay-config": "9.0.0",
-    "relay-runtime": "9.0.0"
+    "relay-compiler": "^10.0.1",
+    "relay-compiler-language-typescript": "^13.0.1",
+    "relay-config": "^10.0.1",
+    "relay-runtime": "^10.0.1"
   }
 }
